1.11/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger-ponger-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger-ponger
  template:
    metadata:
      labels:
        app: logger-ponger
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: log-claim
      containers:
        - name: logger
          image: okisma/logger:1.11.4
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
        - name: ponger
          image: okisma/ponger:1.11
          volumeMounts:
          - name: shared-log
            mountPath: /usr/src/app/files
