1.11/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logger-svc
spec:
  type: ClusterIP
  selector:
    app: logger-ponger
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3002
      name: logger
    - port: 4567
      protocol: TCP
      targetPort: 3001
      name: ponger
